--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "react-rating-stars-component": "^2.2.0",
     "validator": "^13.7.0"
   }
 }
