--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-alert-template-mui": "^1.0.7",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -59,5 +60,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.0.103:4000"
+  "proxy": "http://192.168.0.104:4000"
 }
